yaml/kubestellar-server-oc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubestellar

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubestellar-server
  namespace: kubestellar
spec:
  selector:
    matchLabels:
      app: kubestellar-server
  replicas: 1
  template:
    metadata:
      labels:
        app: kubestellar-server
    spec:
      serviceAccountName: kubestellar-service-account
      containers:
      - name: kubestellar-server
        image: quay.io/kubestellar/kubestellar:fs # for testing, change to :stable
        imagePullPolicy: Always # for testing, change to IfNotPresent
        volumeMounts:
        - name: kubestellar-pv
          mountPath: "/kubestellar/home"
          readOnly: false
        ports:
        - name: ks-port
          protocol: TCP
          containerPort: 6443
      volumes:
      - name: kubestellar-pv
        persistentVolumeClaim:
          claimName: kubestellar-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: kubestellar-service
  namespace: kubestellar
spec:
  selector:
    app: kubestellar-server
  ports:
    - protocol: TCP
      port: 6443 # Default port for image
      targetPort: ks-port

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#     kubernetes.io/ingress.class: nginx
#   name: kubestellar-ingress
#   namespace: kubestellar
# spec:
#   rules:
#   - host: kubestellar.svc.cluster.local
#     http:
#       paths:
#       - pathType: Prefix
#         path: /
#         backend:
#           service:
#             name: kubestellar-service
#             port:
#               number: 6443

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubestellar-route
spec:
  host: kubestellar.svc.cluster.local
  port:
    targetPort: 6443
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  to:
    kind: Service
    name: kubestellar-service
